# puffer-statistics

./: .gitignore  Makefile.am  README.md  analyze.cc  analyzeutil.hh  configure.ac  confinterval.cc  confintutil.hh  csv_to_stream_stats.cc  dateutil.hh  deps.sh  dump.cc  influx_to_csv.cc  parser.cc  pre_confinterval.cc  private_analyze.cc  public_analyze.cc  schemedays.cc  stream_stats_to_metadata.cc  stream_to_scheme_stats.cc  submission_anon_analyze.cc  watchtimesutil.hh
experiments/: dump-puffer-experiment  puffer.expt_feb2_2020  puffer.expt_feb4_2020  puffer.expt_jan9_2020
plots/: cold_start_data-to-gnuplot  coldstart_only.sh  current_all_data-to-gnuplot  current_slow_data-to-gnuplot  data-to-gnuplot  emu-era.txt  emu_all_data-to-gnuplot  fetch_and_analyze.sh  fetch_and_plot.sh  linear_all_data-to-gnuplot  mle_all_data-to-gnuplot  parallel_wrapper_fetch_and_analyze.sh  post_analyze.sh  primary-analysis-final.txt  primary.gnu  primary_all_data-to-gnuplot  primary_slow_data-to-gnuplot  scheme_stats_to_plot.py  september.txt  slow-sessions-final.txt  ssim_stall_to_gnuplot  vintages_all_data-to-gnuplot  vintages_slow_data-to-gnuplot  watchtimes_only.sh
plots/watchtimes/: linear_bba_bbr.cdf  megawatchtimes.gnu  mpc_bbr.cdf  pensieve_bbr.cdf  puffer_ttp_20190402_bbr.cdf  puffer_ttp_bbr.cdf  puffer_ttp_cl_bbr.cdf  puffer_ttp_emu_bbr.cdf  puffer_ttp_linear_bbr.cdf  puffer_ttp_static_bbr.cdf  robust_mpc_bbr.cdf  watchtimes2.gnu
post_draft_results/: current_all_confint_err.txt  current_all_confint_out.txt  current_intx_out.txt  current_slow_confint_err.txt  current_slow_confint_out.txt  emu_all_confint_err.txt  emu_all_confint_out.txt  emu_intx_out.txt  linear_all_confint_err.txt  linear_all_confint_out.txt  linear_intx_out.txt  mle_all_confint_err.txt  mle_all_confint_out.txt  mle_intx_out.txt  primary_all_confint_err.txt  primary_all_confint_out.txt  primary_intx_out.txt  primary_slow_confint_err.txt  primary_slow_confint_out.txt  scheme_days.txt  scheme_days_summary.txt  unweighted_avgbitrate_out.txt  vintages_all_confint_err.txt  vintages_all_confint_out.txt  vintages_intx_out.txt  vintages_slow_confint_err.txt  vintages_slow_confint_out.txt  weighted_avgbitrate_out.txt
post_draft_results/cold_start/: cold_start_out.txt
post_draft_results/first_ssims/: first_ssims.csv  linear_bba_bbr.cdf  mpc_bbr.cdf  pensieve_bbr.cdf  puffer_ttp_20190202_bbr.cdf  puffer_ttp_20190302_bbr.cdf  puffer_ttp_20190402_bbr.cdf  puffer_ttp_20190502_bbr.cdf  puffer_ttp_bbr.cdf  puffer_ttp_cl_bbr.cdf  puffer_ttp_cl_mle_bbr.cdf  puffer_ttp_emu_bbr.cdf  puffer_ttp_linear_bbr.cdf  puffer_ttp_static_bbr.cdf  robust_mpc_bbr.cdf
post_draft_results/startup_delays/: linear_bba_bbr.cdf  mpc_bbr.cdf  pensieve_bbr.cdf  puffer_ttp_20190202_bbr.cdf  puffer_ttp_20190302_bbr.cdf  puffer_ttp_20190402_bbr.cdf  puffer_ttp_20190502_bbr.cdf  puffer_ttp_bbr.cdf  puffer_ttp_cl_bbr.cdf  puffer_ttp_cl_mle_bbr.cdf  puffer_ttp_emu_bbr.cdf  puffer_ttp_linear_bbr.cdf  puffer_ttp_static_bbr.cdf  robust_mpc_bbr.cdf  startup_delays.csv
post_draft_results/watchtimes/: linear_bba_bbr.cdf  mpc_bbr.cdf  pensieve_bbr.cdf  pensieve_in_situ_bbr.cdf  puffer_ttp_20190202_bbr.cdf  puffer_ttp_20190302_bbr.cdf  puffer_ttp_20190402_bbr.cdf  puffer_ttp_20190402_mle_bbr.cdf  (+8 more)
scripts/: cold-start-megasessions  count-megasessions  count_streams.sh  deps.sh  entrance.sh  export_constants.sh  fetch_and_analyze.sh  get_month_stream_stats.sh  get_period_stream_stats.sh  get_public_prereq_files.sh  init_data_release_vm.sh  list_period_dates.sh  parallel_wrapper_fetch_and_analyze.sh  parallel_wrapper_private_date_release.sh  parallelizable_private_data_release.sh  post_analyze.sh  private_data_release.sh  private_entrance.sh  public_entrance.sh  upload_buf_video_sent.sh  upload_public_results.sh  watch-time-megasessions
(+19 files in other folders)
